Get rid of deprecated newInstance call